# rotating_logger

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
UML/: uml_diagram.puml
rotating_logger/: __init__.py  rotatinglogger.py
rotating_logger/src/: rotatinglogger.py
rotating_logger/tests/: singleton_test.py
src/: __init__.py  logger.py  singleton.py
