[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rotating_logger"
version = "0.1.1"
authors = [
  { name="Romain Mrad", email="romain.mrad@gmail.com" },
]
description = "A singleton rotating logger"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/romainmrad/rotating_logger.git"
